[tests] Cleanup deprecated items, add missing assertions, fix logging